Build weather API call and city-item component

--- a/src/app/components/city-item/city-item.component.css
+++ b/src/app/components/city-item/city-item.component.css
@@ -1,15 +1,10 @@
 
-.card{
+.default{
     display: flex;
     height: 7rem;
-    width: 7rem;
+    width: 9rem;
     background: black;
     color: white;
     font-weight: bold;
     text-align: center;
-}
-
-.card:hover{
-    cursor: pointer;
-    background: grey;
 }
