--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,8 @@
 
   <div class="container d-flex align-items-center justify-content-center h-100">
       <div class="row">
-        <app-city-item *ngFor="let city of cities" [city]="city">
-        </app-city-item>
+        <app-card *ngFor="let city of cities" [city]="city">
+        </app-card>
       </div>
   </div>
 <router-outlet></router-outlet>
