Implemented background images and periodic weather updates

--- a/src/app/components/card/card.component.css
+++ b/src/app/components/card/card.component.css
@@ -2,8 +2,12 @@
     display: flex;
     height: 7rem;
     width: 9rem;
-    background: black;
-    color: white;
     font-weight: bold;
     text-align: center;
+}
+
+.panelbg{
+    background: no-repeat center;
+    background-color: skyblue;
+    background-size: contain;
 }
