--- a/src/app/components/card/card.component.html
+++ b/src/app/components/card/card.component.html
@@ -1,9 +1,17 @@
 <div class="col my-2">
     <div *ngIf="!city.cityFound; else cityItem">
-        <app-blank-item class = "panel card" [enterCity]="enterCity" [searchNotFound]="searchNotFound" (searchCity)="onSearchCity($event)"></app-blank-item>
+        <app-blank-item 
+        class = "panel panelbg card" 
+        [enterCity]="enterCity" 
+        [searchNotFound]="searchNotFound" 
+        (searchCity)="onSearchCity($event)"></app-blank-item>
     </div>
     <ng-template #cityItem>
-        <app-city-item class="panel card" [city]="city" (editCity)="onEditCity()" ></app-city-item>
+        <app-city-item
+        [style.background-image]="bgimg" 
+        class="panel panelbg card" 
+        [city]="city" 
+        (editCity)="onEditCity()" ></app-city-item>
     </ng-template>
 </div>
 
